--- a/shinjuku.html
+++ b/shinjuku.html
@@ -80,7 +80,7 @@
           console.log("ボタン押した");
           //deleteMakers(markers_cafe);
           markers_cafe = [];
-          //markers_cafe.setMap(null);
+          markers_cafe.setMap(map);
           
          
         }
