--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             		<li class="gnav__menu__item"><a href="kodaira.html">小平キャンパス</a></li>
             		<li class="gnav__menu__item"><a href="kokubunji.html">国分寺駅</a></li>
             		<li class="gnav__menu__item"><a href="shinjuku.html">新宿駅</a></li>
-           		<li class="gnav__menu__item"><a href="">News</a></li>
+           		<li class="gnav__menu__item"><a href="test.html">テスト</a></li>
             		<li class="gnav__menu__item"><a href="">Contact</a></li>
         		</ul>
     		</nav>
