--- a/test.html
+++ b/test.html
@@ -30,8 +30,8 @@
           
           console.log("ボタン押した");
           //deleteMakers(markers_cafe);
-          markers_cafe = [];
-          markers_cafe.setMap(map);
+          //markers_cafe = [];
+          //markers_cafe.setMap(map);
         }
   
     </center>
