--- a/index.html
+++ b/index.html
@@ -1,37 +1,21 @@
-<!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<link rel="stylesheet" href="style_index.css" >
-		<title>home</title>
-	</head>
-	<body>
-		<header class="site-header">
-    		<h1 class="site-logo"><alt="つだマップ"></h1>
-    		<nav class="gnav">
-        		<ul class="gnav__menu">
-            		<li class="gnav__menu__item"><a href="kodaira.html">小平キャンパス</a></li>
-            		<li class="gnav__menu__item"><a href="kokubunji.html">国分寺駅</a></li>
-            		<li class="gnav__menu__item"><a href="shinjuku.html">新宿駅</a></li>
-           		<li class="gnav__menu__item"><a href="test.html">テスト</a></li>
-            		<li class="gnav__menu__item"><a href="">Contact</a></li>
-        		</ul>
+	<div class="hero"><img src="images/hero.jpg" width="1600" height="1200" alt="hero"></div>
+	<header class="site-header">
+   	 	<h1 class="site-logo"><img src="images/logo.png" alt="WEBDESIGNDAY"></h1>
+   	 	<nav class="gnav">
+      	  		<ul class="gnav__menu">
+          			<li class="gnav__menu__item"><a href="kodaira.html">小平</a></li>
+            			<li class="gnav__menu__item"><a href="kokubunji.html">国分寺</a></li>
+            			<li class="gnav__menu__item"><a href="shinjuku.html">新宿</a></li>
+            			<li class="gnav__menu__item"><a href="test.html">Test</a></li>
+            			<li class="gnav__menu__item"><a href="">Contact</a></li>
+          		</ul>
     		</nav>
-		</header>
-		<div class="hero"><img src="3388477_l.jpg" alt="hero"></div>
-		<div class="content">
-		</div>
-		<h2>概要</h2>
-		<h2>使い方</h2>
-			<p>1.表示したい地域のボタンをクリック<br>
-			2.除外する条件のチェックボックスを外す<br>
-			3.条件変更ボタンを押す
-			</p>
-		<h2>製作者について</h2>
-			<p>津田塾大学学芸学部情報科学科4年来住ゼミ3班</p>
-		<footer class="site-footer">
-    		<p class="copyright">@2021 kishi_4seminar</p>
-		</footer>
- 
-	</body>
+	</header> 
+	<div class="content">
+    <!--省略-->
+	</div>
+	<footer class="site-footer">
+    		<p class="copyright">@2021 Kishi_4seminar</p>
+	</footer>
 </html>
