--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
-	<div class="hero"><img src="images/hero.jpg" width="1600" height="1200" alt="hero"></div>
+	<head>
+		<meta cahrset="UTF-8">
+		<link rel="stylesheet" href="style_index.css">
+		<title>home</title>
+	</head>
+	<div class="hero"><img src="hero.jpg" width="1600" height="1200" alt="hero"></div>
 	<header class="site-header">
    	 	<h1 class="site-logo"><img src="images/logo.png" alt="WEBDESIGNDAY"></h1>
    	 	<nav class="gnav">
