--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" href="style_index.css">
 		<title>home</title>
 	</head>
-	<div class="hero"><img src="hero.jpg" width="1600" height="1200" alt="hero"></div>
+	<div class="hero"><img src="3388477_l.jpg" width="1600" height="1200" alt="hero"></div>
 	<header class="site-header">
    	 	<h1 class="site-logo"><img src="images/logo.png" alt="WEBDESIGNDAY"></h1>
    	 	<nav class="gnav">
