--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<div class="hero"><img src="3388477_l.jpg" width="1600" height="1200" alt="hero"></div>
 	<header class="site-header">
-   	 	<h1 class="site-logo"><img src="images/logo.png" alt="WEBDESIGNDAY"></h1>
+   	 	<h1>mume</h1>
    	 	<nav class="gnav">
       	  		<ul class="gnav__menu">
           			<li class="gnav__menu__item"><a href="kodaira.html">小平</a></li>
