--- a/index.html
+++ b/index.html
@@ -4,20 +4,19 @@
 		<link rel="stylesheet" href="style_index.css">
 		<title>home</title>
 	</head>
-	<div class="hero"><img src="3388477_l.jpg" width="1600" height="1200" alt="hero"></div>
 	<header class="site-header">
-   	 	<h1>mume</h1>
-   	 	<nav class="gnav">
-      	  		<ul class="gnav__menu">
-          			<li class="gnav__menu__item"><a href="kodaira.html">小平</a></li>
-            			<li class="gnav__menu__item"><a href="kokubunji.html">国分寺</a></li>
-            			<li class="gnav__menu__item"><a href="shinjuku.html">新宿</a></li>
-            			<li class="gnav__menu__item"><a href="test.html">Test</a></li>
+    		<h1 class="site-logo"><img src="images/logo.png" alt="WEBDESIGNDAY"></h1>
+    		<nav class="gnav">
+        		<ul class="gnav__menu">
+            			<li class="gnav__menu__item"><a href="kodaira.html">About</a></li>
+            			<li class="gnav__menu__item"><a href="kokubunji.html">Works</a></li>
+            			<li class="gnav__menu__item"><a href="shinjuku.html">Recruit</a></li>
+            			<li class="gnav__menu__item"><a href="test.html">News</a></li>
             			<li class="gnav__menu__item"><a href="">Contact</a></li>
-          		</ul>
+        		</ul>
     		</nav>
-	</header> 
-	<div class="hero"><img src="3388477_l.jpg" width="1600" height="1200" alt="hero"></div>
+	</header>
+	<div class="hero"><img src="images/hero.jpg" alt="hero"></div>
 	<div class="content">
     		<p>The first step in awakening our senses is to rediscover the ability to observe that we had as children. To do so we need to stop anticipating what we are going to see and feel before it happens. Such anticipation blocks our
 ability to feel. For example, one chilly night I was on a mountain hike with some students. I told them that we were going to have to cross a mountain stream. They began
