--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 	<head>
 		<meta cahrset="UTF-8">
 		<link rel="stylesheet" href="style_index.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap" rel="stylesheet">
 		<title>home</title>
 	</head>
 	<header class="site-header">
