--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap" rel="stylesheet">
+		<script src="indexstyle.js"></script>
 		<title>home</title>
 	</head>
 	<header class="site-header">
