--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
     		<h1 class="site-logo">mume</h1>
     		<nav class="gnav">
         		<ul class="gnav__menu">
-            			<li class="gnav__menu__item"><a href="kodaira.html">About</a></li>
-            			<li class="gnav__menu__item"><a href="kokubunji.html">Works</a></li>
-            			<li class="gnav__menu__item"><a href="shinjuku.html">Recruit</a></li>
-            			<li class="gnav__menu__item"><a href="test.html">News</a></li>
-            			<li class="gnav__menu__item"><a href="">Contact</a></li>
+            			<li class="gnav__menu__item"><a href="kodaira.html">小平</a></li>
+            			<li class="gnav__menu__item"><a href="kokubunji.html">国分寺</a></li>
+            			<li class="gnav__menu__item"><a href="shinjuku.html">新宿</a></li>
+            			<li class="gnav__menu__item"><a href="test.html">テスト</a></li>
         		</ul>
     		</nav>
 	</header>
