--- a/test.html
+++ b/test.html
@@ -3,9 +3,9 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <title>Google Maps JavaScript API サンプル</title>
    
-    <script src="shinjuku_data.js" type="text/javascript"></script>
-    <script src="shinjuku_cafe.js" type="text/javascript"></script>
-    <script src="map.js" type="text/javascript"></script>
+    <script src="shop_list/shinjuku_data.js" type="text/javascript"></script>
+    <script src="shop_list/shinjuku_cafe.js" type="text/javascript"></script>
+    <script src="test.js" type="text/javascript"></script>
     <script>
       window.onload = function () {
         initMap();
