--- a/shinjuku.html
+++ b/shinjuku.html
@@ -10,7 +10,7 @@
   </head>
   
   <body>
-    <script type="text/javascript" src="shop_list/shinjuku_data.js></script>
+    <script type="text/javascript" src="shop_list/shinjuku_data.js"></script>
     <script type="text/javascript" src="./shinjuku_map.js"></script>
     <script>
       function loadFinished(){
