--- a/test.html
+++ b/test.html
@@ -21,6 +21,10 @@
           checkbox[i].checked = trueOrFalse
         }
       }
+      
+      function clickEvent(){
+        cafe();
+      }
     </script>
   </head>
   <body onload="initMap()">
