--- a/test.html
+++ b/test.html
@@ -23,7 +23,7 @@
       }
       
       function clickEvent(){
-        cafe(1);
+        markers_cafe.setMap(null);
       }
     </script>
   </head>
