--- a/shinjuku.html
+++ b/shinjuku.html
@@ -7,10 +7,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap" rel="stylesheet">
     <title>新宿</title>
+    <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+   <script>
+   $(function() {
+      const hum = $('#hamburger, .close')
+      const nav = $('.sp-nav')
+      hum.on('click', function(){
+         nav.toggleClass('toggle');
+      });
+   });
+   </script>
   </head>
   
   <body>
-    <script type="text/javascript" src="shop_list/shinjuku_data.js"></script>
+    <script type="text/javascript" src="/shinjuku_data.js"></script>
     <script type="text/javascript" src="./shinjuku_map.js"></script>
     <script>
       function loadFinished(){
@@ -27,7 +37,7 @@
       <div class="logo">
         <a href="index.html">mume</a>
       </div>
-      <nav>
+      <nav class="pc-nav">
         <ul>
           <li><a href="kodaira.html">小平</a></li>
           <li><a href="kokubunji.html">国分寺</a></li>
@@ -35,6 +45,18 @@
           <li><a href="#">掲示板</a></li>
         </ul>
       </nav>
+      <nav class="sp-nav">
+        <ul>
+          <li><a href="kodaira.html">小平</a></li>
+          <li><a href="kokubunji.html">国分寺</a></li>
+          <li><a href="shinjuku.html">新宿</a></li>
+          <li><a href="#">掲示板</a></li>
+	  <li class="close"><span>閉じる</span></li>
+        </ul>
+      </nav>
+      <div id="hamburger">
+	<span></span>
+      </div>
     </header>
     
     <center>
@@ -43,7 +65,7 @@
 	<button class="button" onclick="location.href='kuchikomishinjuku.html'">周辺情報掲示板</button>
 	</h1>
 
-      <div id="map" style="width:620px; height:400px"></div>
+      <div class="map" id="map" style="width:620px; height:400px"></div>
 
       <script src="https://maps.googleapis.com/maps/api/js?language=ja&region=JP&key=AIzaSyAiV2ZbFIYuD3N4hzGLstSn2e4ZG5A7QlU&callback=initMap&libraries=places" async defer></script>
       </script>
@@ -59,7 +81,7 @@
       <p>コンセントの有無</p>
       <input id="sample41" value="1" name="shinjuku" type="checkbox" checked><label for="sample41" class="checkbox01">コンセントあり</label>
       <input id="sample42" value="1" name="shinjuku" type="checkbox" checked><label for="sample42" class="checkbox01">コンセントなし</label>
-      <p>現在地からの距離</p>
+      <p>新宿駅からの距離</p>
       <input id="sample43" value="1" name="shinjuku" type="checkbox" onclick="s100m();" checked><label for="sample43" class="checkbox01">100M以内</label>
       <input id="sample44" value="1" name="shinjuku" type="checkbox" onclick="s200m();" checked><label for="sample44" class="checkbox01">200M以内</label>
       <input id="sample45" value="1" name="shinjuku" type="checkbox" onclick="s300m();" checked><label for="sample45" class="checkbox01">300M以内</label>
