--- a/test.html
+++ b/test.html
@@ -23,7 +23,8 @@
       }
       
       function clickEvent(){
-        markers_cafe.setMap(null);
+        cafe(1);
+        famires(1);
       }
     </script>
   </head>
