--- a/test.html
+++ b/test.html
@@ -13,6 +13,11 @@
     <script>
       window.onload = function () {
         initMap();
+        cafe(1);
+        famires(1);
+        hamburger(1);
+        karaoke(1);
+        netcafe(1);
       }
       const checkbox = document.getElementsByName("shinjuku")
 
@@ -23,8 +28,11 @@
       }
       
       function clickEvent(){
-        cafe(1);
-        famires(1);
+        cafe(0);
+        famires(0);
+        hamburger(0);
+        karaoke(0);
+        netcafe(0);
       }
     </script>
   </head>
