--- a/test.html
+++ b/test.html
@@ -56,11 +56,11 @@
     <br>
     
     <p>お店の種類</p>
-    <input id="sample48" value="1" name="shinjuku" type="checkbox" checked><label for="sample48">カフェ</label>
-    <input id="sample49" value="1" name="shinjuku" type="checkbox" checked><label for="sample49">ファミレス</label>
-    <input id="sample55" value="1" name="shinjuku" type="checkbox" checked><label for="sample55">ハンバーガー</label>
-    <input id="sample51" value="1" name="shinjuku" type="checkbox" checked><label for="sample51">カラオケ</label>
-    <input id="sample50" value="1" name="shinjuku" type="checkbox" checked><label for="sample50">ネットカフェ</label>
+    <input id="1" name="cafe" type="checkbox" checked><label for="cafe">カフェ</label>
+    <input id="2" name="famires" type="checkbox" checked><label for="famires">ファミレス</label>
+    <input id="3" name="hamburger" type="checkbox" checked><label for="hamburger">ハンバーガー</label>
+    <input id="4" name="karaoke" type="checkbox" checked><label for="karaoke">カラオケ</label>
+    <input id="5" name="netcafe" type="checkbox" checked><label for="netcafe">ネットカフェ</label>
     
     <form>
     <p>
