--- a/shinjuku.html
+++ b/shinjuku.html
@@ -25,10 +25,10 @@
     <script>
       function loadFinished(){
         cafe();
-        //famires();
-        //hamburger(); 
-        //karaoke();
-        //netcafe();
+        famires();
+        hamburger(); 
+        karaoke();
+        netcafe();
       }
       window.onload = loadFinished;
     </script>
