--- a/test.html
+++ b/test.html
@@ -32,7 +32,7 @@
       }
       
       function clickEvent(){
-        deletemarkersall()
+        deletemarkersall();
       }
       
     </script>
