--- a/test.html
+++ b/test.html
@@ -37,7 +37,7 @@
       
     </script>
   </head>
-  <body onload="initMap()">
+  <body onload="loadFinished()">
     <button onclick="location.href='index.html'">ホーム</button>
     <button onclick="location.href='kodaira.html'">小平キャンパス周辺</button>
     <button onclick="location.href='kokubunji.html'">国分寺駅周辺</button>
