--- a/test.html
+++ b/test.html
@@ -49,11 +49,11 @@
     <br>
     
     <p>お店の種類</p>
-    <input id="cafebox" name="cafe" type="checkbox" checked><label for="cafe">カフェ</label>
-    <input id="famiresbox" name="famires" type="checkbox" checked><label for="famires">ファミレス</label>
-    <input id="hamburgerbox" name="hamburger" type="checkbox" checked><label for="hamburger">ハンバーガー</label>
-    <input id="karaokebox" name="karaoke" type="checkbox" checked><label for="karaoke">カラオケ</label>
-    <input id="netcafebox" name="netcafe" type="checkbox" checked><label for="netcafe">ネットカフェ</label>
+    <input id="cafebox" name="shinjuku" type="checkbox" checked><label for="cafe">カフェ</label>
+    <input id="famiresbox" name="shinjuku" type="checkbox" checked><label for="famires">ファミレス</label>
+    <input id="hamburgerbox" name="shinjuku" type="checkbox" checked><label for="hamburger">ハンバーガー</label>
+    <input id="karaokebox" name="shinjuku" type="checkbox" checked><label for="karaoke">カラオケ</label>
+    <input id="netcafebox" name="shinjuku" type="checkbox" checked><label for="netcafe">ネットカフェ</label>
     
     <form>
     <p>
