--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>home</title>
 	</head>
 	<header class="site-header">
-    		<h1 class="site-logo">mume</h1>
+    		<h1 class="site-logo">オンライン授業受講場所検索サイト<br/>mume</h1>
     		<nav class="gnav">
         		<ul class="gnav__menu">
             			<li class="gnav__menu__item"><a href="kodaira.html">小平</a></li>
@@ -20,24 +20,7 @@
     		</nav>
 	</header>
 	<div class="hero"><img src="3388477_l.jpg" alt="hero"></div>
-	<div class="content">
-    		<p>The first step in awakening our senses is to rediscover the ability to observe that we had as children. To do so we need to stop anticipating what we are going to see and feel before it happens. Such anticipation blocks our
-ability to feel. For example, one chilly night I was on a mountain hike with some students. I told them that we were going to have to cross a mountain stream. They began
-to grumble about how cold it would be. We reached the stream and they reluctantly plunged ahead. They were almost up to their knees in the water when
-they realized that I had led them into a hot spring. Later they all said that they had felt cold water at first.</p>
-		<p>The first step in awakening our senses is to rediscover the ability to observe that we had as children. To do so we need to stop anticipating what we are going to see and feel before it happens. Such anticipation blocks our
-ability to feel. For example, one chilly night I was on a mountain hike with some students. I told them that we were going to have to cross a mountain stream. They began
-to grumble about how cold it would be. We reached the stream and they reluctantly plunged ahead. They were almost up to their knees in the water when
-they realized that I had led them into a hot spring. Later they all said that they had felt cold water at first.</p>
-		<p>The first step in awakening our senses is to rediscover the ability to observe that we had as children. To do so we need to stop anticipating what we are going to see and feel before it happens. Such anticipation blocks our
-ability to feel. For example, one chilly night I was on a mountain hike with some students. I told them that we were going to have to cross a mountain stream. They began
-to grumble about how cold it would be. We reached the stream and they reluctantly plunged ahead. They were almost up to their knees in the water when
-they realized that I had led them into a hot spring. Later they all said that they had felt cold water at first.</p>
-		<p>The first step in awakening our senses is to rediscover the ability to observe that we had as children. To do so we need to stop anticipating what we are going to see and feel before it happens. Such anticipation blocks our
-ability to feel. For example, one chilly night I was on a mountain hike with some students. I told them that we were going to have to cross a mountain stream. They began
-to grumble about how cold it would be. We reached the stream and they reluctantly plunged ahead. They were almost up to their knees in the water when
-they realized that I had led them into a hot spring. Later they all said that they had felt cold water at first.</p>
-	</div>
+	<div class="content">このサイトは現在開発中です</div>
 	<footer class="site-footer">
     		<p class="copyright">@2021 Kishi_4seminar</p>
 	</footer>
