--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>home</title>
 	</head>
 	<header class="site-header">
-    		<h1 class="site-logo">オンライン授業受講場所検索サイト<br/>mume</h1>
+    		<h1 class="site-logo" align="center">オンライン授業<br/>受講場所検索サイト<br/>mume</h1>
     		<nav class="gnav">
         		<ul class="gnav__menu">
             			<li class="gnav__menu__item"><a href="kodaira.html">小平</a></li>
