--- a/shinjuku.html
+++ b/shinjuku.html
@@ -20,6 +20,7 @@
   </head>
   
   <body>
+	  <!-- ここからはじまり -->
     <script type="text/javascript" src="shop_list/shinjuku_data.js"></script>
     <script type="text/javascript" src="./shinjuku_map.js"></script>
     <script>
@@ -96,6 +97,7 @@
          
         }
      </script>
+	<!-- ここまで終わり -->
   </body>
     <header>
       <div class="logo">
