--- a/kodaira.html
+++ b/kodaira.html
@@ -62,7 +62,7 @@
     <center>
       <br><br><br>
       <h1>小平キャンパス周辺
-	<button class="button" onclick="location.href='kuchikomishinjuku.html'">周辺情報掲示板</button>
+	<button class="button" onclick="location.href='kuchikomikodaira.html'">周辺情報掲示板</button>
 	</h1>
 
       <div class="map" id="map" style="width:620px; height:400px"></div>
