--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             			<li class="gnav__menu__item"><a href="kokubunji.html">国分寺</a></li>
             			<li class="gnav__menu__item"><a href="shinjuku.html">新宿</a></li>
             			<li class="gnav__menu__item"><a href="test.html">テスト</a></li>
+				<li class="gnav__menu__item"><a href="https://yuika11.pythonanywhere.com/">掲示板</a></li>
         		</ul>
     		</nav>
 	</header>
