--- a/kodaira.html
+++ b/kodaira.html
@@ -29,7 +29,7 @@
           <li><a href="kodaira.html">小平</a></li>
           <li><a href="kokubunji.html">国分寺</a></li>
           <li><a href="shinjuku.html">新宿</a></li>
-          <li><a href="#">掲示板</a></li>
+          <li><a href="https://yuika11.pythonanywhere.com/">掲示板</a></li>
         </ul>
       </nav>
       <nav class="sp-nav">
@@ -37,7 +37,7 @@
           <li><a href="kodaira.html">小平</a></li>
           <li><a href="kokubunji.html">国分寺</a></li>
           <li><a href="shinjuku.html">新宿</a></li>
-          <li><a href="#">掲示板</a></li>
+          <li><a href="https://yuika11.pythonanywhere.com/">掲示板</a></li>
 	  <li class="close"><span>閉じる</span></li>
         </ul>
       </nav>
