--- a/shinjuku.html
+++ b/shinjuku.html
@@ -123,7 +123,7 @@
       <input id="sample54" value="1" name="shinjuku" type="checkbox" onclick="otherss();" checked><label for="sample54" class="checkbox01">その他</label>
       <br><br>
       </form>
-      <button class="button-1" onclick="clickEvent()">条件変更</button>
+      <button class="button" onclick="clickEvent()">条件変更</button>
       <br>
       <br>
     </div>
