--- a/test.html
+++ b/test.html
@@ -13,11 +13,11 @@
     <script>   
       function loadFinished(){
         initMap();
-        cafe();
+        //cafe();
         famires();
-        hamburger(); 
-        karaoke();
-        netcafe();
+        //hamburger(); 
+        //karaoke();
+        //netcafe();
       }
 
       const checkbox = document.getElementsByName("shinjuku")
