--- a/kokubunji.html
+++ b/kokubunji.html
@@ -89,11 +89,11 @@
       <input id="sample46" value="1" name="shinjuku" type="checkbox" onclick="koshitsu5();" checked><label for="sample46" class="checkbox01">個室あり</label>
       <input id="sample47" value="1" name="shinjuku" type="checkbox" onclick="koshitsu6();" checked><label for="sample47" class="checkbox01">個室なし</label>
       <p>お店の種類</p>
-      <input id="sample48" value="1" name="shinjuku" type="checkbox" checked><label for="sample48" class="checkbox01">カフェ</label>
-      <input id="sample49" value="1" name="shinjuku" type="checkbox" checked><label for="sample49" class="checkbox01">ファミレス</label>
-      <input id="sample55" value="1" name="shinjuku" type="checkbox" checked><label for="sample55" class="checkbox01">ハンバーガー</label>
-      <input id="sample51" value="1" name="shinjuku" type="checkbox" checked><label for="sample51" class="checkbox01">カラオケ</label>
-      <input id="sample50" value="1" name="shinjuku" type="checkbox" checked><label for="sample50" class="checkbox01">ネットカフェ</label>
+      <input id="cafebox" value="1" name="shinjuku" type="checkbox" checked><label for="sample48" class="checkbox01">カフェ</label>
+      <input id="famiresbox" value="1" name="shinjuku" type="checkbox" checked><label for="sample49" class="checkbox01">ファミレス</label>
+      <input id="hamburgerbox" value="1" name="shinjuku" type="checkbox" checked><label for="sample55" class="checkbox01">ハンバーガー</label>
+      <input id="karaokebox" value="1" name="shinjuku" type="checkbox" checked><label for="sample51" class="checkbox01">カラオケ</label>
+      <input id="netcafebox" value="1" name="shinjuku" type="checkbox" checked><label for="sample50" class="checkbox01">ネットカフェ</label>
       <p>価格帯</p>
       <input id="sample52" value="1" name="shinjuku" type="checkbox" onclick="level2s();" checked><label for="sample52" class="checkbox01">普通</label>
       <input id="sample53" value="1" name="shinjuku" type="checkbox" onclick="level3s();" checked><label for="sample53" class="checkbox01">少し高め</label>
