--- a/kokubunji.html
+++ b/kokubunji.html
@@ -116,6 +116,21 @@
           
           console.log("ボタン押した");
           deleteMakersAll(markers_cafe);
+	  if(cafebox.checked){
+            cafe();
+          }
+          if(famiresbox.checked){
+            famires();
+          }
+          if(hamburgerbox.checked){
+            hamburger();
+          }
+          if(karaokebox.checked){
+            karaoke();
+          }
+          if(netcafebox.checked){
+            netcafe();
+          }
       
         }
      </script>
