--- a/test.html
+++ b/test.html
@@ -13,8 +13,8 @@
     <script>   
       function loadFinished(){
         initMap();
-        //cafe();
-        famires();
+        cafe();
+        //famires();
         //hamburger(); 
         //karaoke();
         //netcafe();
