--- a/kokubunji.html
+++ b/kokubunji.html
@@ -117,19 +117,19 @@
           console.log("ボタン押した");
           deleteMakersAll(markers_cafe);
 	  if(cafebox.checked){
-            cafe();
+            setcafe();
           }
           if(famiresbox.checked){
-            famires();
+            setfamires();
           }
           if(hamburgerbox.checked){
-            hamburger();
+            sethamburger();
           }
           if(karaokebox.checked){
-            karaoke();
+            setkaraoke();
           }
           if(netcafebox.checked){
-            netcafe();
+            setnetcafe();
           }
       
         }
