--- a/kokubunji.html
+++ b/kokubunji.html
@@ -125,6 +125,8 @@
       
         }
      </script>
+     <script src="https://maps.googleapis.com/maps/api/js?language=ja&region=JP&key=AIzaSyAiV2ZbFIYuD3N4hzGLstSn2e4ZG5A7QlU&callback=initMap&libraries=places" async defer></script>
+     </script>
      <script>
       function loadFinished(){
         setcafe();
