--- a/kokubunji.html
+++ b/kokubunji.html
@@ -127,11 +127,13 @@
      </script>
      <script>
       function loadFinished(){
+	console.log("xx1");
         setcafe();
         setfamires();
         sethamburger(); 
         setkaraoke();
         setnetcafe();
+        console.log("xx2");
       }
       window.onload = loadFinished;
     </script>
