--- a/kokubunji.html
+++ b/kokubunji.html
@@ -104,7 +104,7 @@
         function clickEvent(){
           
           console.log("ボタン押した");
-          deleteMakersAll(markers_cafe);
+          deleteMakersAll();
 	  if(cafebox.checked){
             setcafe();
           }
@@ -136,6 +136,8 @@
         console.log("xx2");
       }
       window.onload = loadFinished;
+	     
+	
     </script>
 	<!-- ここまで終わり -->
   </body>
