--- a/kokubunji.html
+++ b/kokubunji.html
@@ -104,7 +104,7 @@
         function clickEvent(){
           
           console.log("ボタン押した");
-          deleteMakersAll();
+         deletemarkersall();
 	  if(cafebox.checked){
             setcafe();
           }
