--- a/kokubunji.html
+++ b/kokubunji.html
@@ -105,6 +105,7 @@
           
           console.log("ボタン押した");
          deletemarkersall();
+	 cafebox = documetn.getElemensById("cafebox");
 	  if(cafebox.checked){
             setcafe();
           }
