--- a/kokubunji.html
+++ b/kokubunji.html
@@ -105,7 +105,7 @@
           
           console.log("ボタン押した");
          deletemarkersall();
-	 cafebox = documetn.getElemensById("cafebox");
+	 cafebox = document.getElemensById("cafebox");
 	  if(cafebox.checked){
             setcafe();
           }
